--- a/public/assets/css/formations.css
+++ b/public/assets/css/formations.css
@@ -37,9 +37,9 @@
     margin-top: 20px;
     font-family: 'Ubuntu';
     font-style: normal;
-    border: none;
+border: none;
 /*     border-color: #009EE2; */
-    box-shadow: 0px 2px 4px #009EE2;
+    box-shadow: 0 1px 2px 0 #7dd7fd;
 }
 .bloc1 {
     margin: 0;
@@ -93,7 +93,7 @@
     font-style: normal;
     font-weight: 400;
     font-size: 20px;
-    line-height: 45px;
+    line-height: 100px;
     /* or 225% */
     margin: 60px 0 60px;
     display: flex;
