--- a/public/assets/css/header.css
+++ b/public/assets/css/header.css
@@ -6,15 +6,19 @@
     color: #FFFFFF;
 }
 
-.bg .navbar .container .navbar-brand {
+.bg .navbar .container-fluid {
+    margin-top: 0;
+}
+
+.bg .navbar .container-fluid .navbar-brand {
     width: 50%;
 }
 
-.bg .navbar .container .navbar-brand img {
+.bg .navbar .container-fluid .navbar-brand img {
     width: 200px;
 }
 
-.bg .navbar .container .profil .btn {
+.bg .navbar .container-fluid .profil .btn {
     background: #D9D9D9;
     border-radius: 50px;
     color: #009EE2;
@@ -50,18 +54,18 @@
     border-bottom: 2px solid #FFFFFF;
 }
 
-.bg .navbar .container .profil .btn .burger {
+.bg .navbar .container-fluid .profil .btn .burger {
     color: #009EE2;
     height: 20px;
 }
 
-.bg .navbar .container .profil .btn .prof {
+.bg .navbar .container-fluid .profil .btn .prof {
     color: #009EE2;
     height: 40px;
     margin-left: 10px;
 }
 
-.bg .navbar .container .profil .btn ul {
+.bg .navbar .container-fluid .profil .btn ul {
     background: #DBDBDB;
     border-radius: 15px;
     position: absolute;
@@ -107,9 +111,22 @@
     border-bottom: 2px solid #009EE2;
 }
 
-
 @media (max-width: 500px) {
-    .bg .navbar .container .navbar-brand img {
+    .bg .navbar .container-fluid .profil .btn {
+        height: 40px;
+        padding: 5px;
+    }
+
+    .bg .navbar .container-fluid .profil .btn .burger {
+        color: #009EE2;
+        height: 15px;
+    }
+
+    .bg .navbar .container-fluid .profil .btn .prof {
+        height: 30px;
+    }
+
+    .bg .navbar .container-fluid .navbar-brand img {
         padding: 0 0 5px 0;
         width: 100px;
     }
@@ -137,7 +154,7 @@
     }
 
 
-    .bg .navbar .container .profil .btn ul {
+    .bg .navbar .container-fluid .profil .btn ul {
         margin-left: -90px;
         padding: 0;
         margin-top: 14px;
