--- a/public/assets/css/inscription.css
+++ b/public/assets/css/inscription.css
@@ -21,7 +21,7 @@ body {
 }
 
 .reseau img {
-    width: 50px;
+    width: 40px;
     height: auto;
     background-color: #d9d9d9;
     border-radius: 35px;
@@ -39,10 +39,10 @@ body {
     font-style: normal;
     font-weight: 700;
     font-size: 16px;
-    line-height: 20px;
+    line-height: 16px;
     letter-spacing: -0.02em;
     color: #000000;
-    /*     margin: 20px 0; */
+         margin: 10px 0;
 }
 
 #formulaire h4 {
@@ -50,13 +50,14 @@ body {
     font-style: normal;
     font-weight: 400;
     font-size: 18px;
-    line-height: 20px;
+    line-height: 16px;
     letter-spacing: -0.02em;
     color: #000000;
 }
 
+
 #formulaire .form-control {
-    padding: 10px;
+    padding: 5px;
     background-color: #d9d9d9;
     border-radius: 5px;
 }
@@ -66,10 +67,10 @@ body {
     font-style: normal;
     font-weight: 400;
     font-size: 18px;
-    line-height: 20px;
+    line-height: 16px;
     letter-spacing: -0.02em;
     color: #000000;
-    margin: 20px 0 10px;
+    margin: 0;
 }
 
 #formulaire span {
@@ -83,17 +84,17 @@ body {
 #formulaire .form-text {
     color: #000000;
     font-size: 12px;
-    line-height: 16px;
+    line-height: 14px;
 }
 
 #formulaire button {
-    padding: 5px 25px;
+    padding: 5px 18px;
     float: right;
     font-family: "Ubuntu", sans-serif;
     font-style: normal;
     font-weight: 400;
-    font-size: 22px;
-    line-height: 44px;
+    font-size: 20px;
+    line-height: 36px;
     letter-spacing: -0.02em;
     border: none;
     color: #ffffff;
@@ -101,7 +102,7 @@ body {
     text-decoration: none;
     background: #009ee2;
     border-radius: 40px;
-    margin-bottom: 10px;
+    margin-bottom: 5px;
 }
 
 .form-group {
@@ -437,21 +438,16 @@ body {
     display: flex;
     justify-content: center;
     align-items: center;
-    height: 90%;
+
     width: 100%;
 }
 
 .content-wrapper .card-body {
     padding: 0;
     margin-top: 20px;
-   position: relative;
-}
-.content-wrapper .card-body::before {
-    position: absolute;
-    content: " ";
-   z-index: 1;
-    background-image: url("../images/Jokkolanté\ KK.png");
-    background-size: 100% 100%;
+
+    background-image: url("../images/Jokkolanté K.png");
+    background-size: contain;
     background-position: center;
     background-repeat: no-repeat;
 }
