--- a/public/assets/css/services.css
+++ b/public/assets/css/services.css
@@ -60,8 +60,7 @@ margin: 0;
 }
 
 #service {
-padding-top: 160px;
-margin-top: -150px;
+    padding: 180px 0 0 0;
     background-image: url("../images/Jok.png");
     background-size: contain;
     background-position: left;
@@ -80,8 +79,6 @@ margin-top: -150px;
 
 }
  #service1 {
-
-
 
 
 }
@@ -112,7 +109,7 @@ margin-top: -150px;
 
 #contact {
     text-align: center;
-    clip-path: polygon(0 10%, 100% 0, 100% 95%, 0 100%);
+
     background: #009EE2;
 
 }
@@ -124,6 +121,8 @@ margin-top: -150px;
 }
 
 #contact .btn {
+    margin: 20px;
+    padding: 10px 30px 10px 30px;
     background: #FFFFFF;
     font-size: 14px;
     line-height: 32px;
