--- a/public/assets/css/inscription.css
+++ b/public/assets/css/inscription.css
@@ -731,11 +731,16 @@ p {
     .content-wrapper .card-body #suivant {
         padding: 0;
         width: 30%;
-        font-size: 16px;
+        font-size: 15px;
     }
 }
 
 @media (max-width: 503px) {
+
+    #formulaire .form-control {
+        font-size: 12px;
+        padding: 5px;
+    }
 
     #formulaire button {
         font-size: 12px;
@@ -764,7 +769,12 @@ p {
     }
 
     #formulaire .form-label {
-        font-size: 16px;
+        margin-left:0;
+        font-size: 15px;
+    }
+    .content-wrapper .card-body h4, p {
+        font-size: 15px;
+        line-height: 20px;
     }
 
     #formulaire .form-text {
@@ -886,8 +896,8 @@ p {
     }
 
     .reseau img {
-        width: 40px;
-        height: 40px;
+        width: 30px;
+        height: 30px;
         background-color: #d9d9d9;
         border-radius: 35px;
         margin-right: 20px;
